Backups/smallCobolParser.output
State 28 conflicts: 1 shift/reduce
State 56 conflicts: 11 reduce/reduce
State 63 conflicts: 11 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: Module1 Module2 Module3

    2 Module1: IDDiv ProgID

    3 Module2: EnvDiv

    4 Module3: ProcDiv Statements StopRun

    5 ProgID: PROGRAMID PERIOD ID PERIOD

    6 Statements: %empty
    7           | Statement Statements

    8 Statement: PERIOD
    9          | Expr PERIOD
   10          | Expr

   11 Expr: DISPLAY STRING
   12     | ACCEPT ID
   13     | IF Condition THEN Statement ENDIF
   14     | PERFORM Statement UNTIL COUNT Operator NUMBER
   15     | PERFORM Statement NUMBER TIMES
   16     | DoubleDigit ID PICTURE IS Nines
   17     | DoubleDigit ID PIC Nines
   18     | DoubleDigit ID PIC IntPicClause
   19     | DoubleDigit ID PICTURE IS FloatClause
   20     | DoubleDigit ID PIC FloatClause
   21     | DoubleDigit ID PICTURE IS UnsignedClause
   22     | DoubleDigit ID PIC UnsignedClause
   23     | DoubleDigit ID PICTURE IS Xs
   24     | DoubleDigit ID PIC Xs
   25     | DoubleDigit ID PIC StringPicClause

   26 Condition: ID Operator ID
   27          | ID Operator NUMBER

   28 Operator: GT_OP
   29         | LT_OP
   30         | EQ_OP
   31         | DOUBLE_EQ_OP
   32         | GT_EQ_OP
   33         | LT_EQ_OP

   34 DoubleDigit: %empty
   35            | DIGIT DIGIT

   36 Nines: %empty
   37      | NINE Nines

   38 Xs: %empty
   39   | LETTERX Xs

   40 IntPicClause: NINE OPEN_PARENTHESES NUMBER CLOSE_PARENTHESES

   41 FloatClause: Nines LETTERV Nines

   42 UnsignedClause: LETTERS Nines

   43 StringPicClause: LETTERX OPEN_PARENTHESES NUMBER CLOSE_PARENTHESES

   44 IDDiv: IDENTIFICATION DIVISION PERIOD

   45 EnvDiv: ENVIRIONMENT DIVISION PERIOD

   46 ProcDiv: PROCEDURE DIVISION PERIOD

   47 StopRun: STOP RUN PERIOD


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <number> (258) 14 15 27 40 43
    DIGIT <number> (259) 35
    ID <string> (260) 5 12 16 17 18 19 20 21 22 23 24 25 26 27
    STRING <string> (261) 11
    IDENTIFICATION <string> (262) 44
    ENVIRIONMENT <string> (263) 45
    PROCEDURE <string> (264) 46
    DIVISION <string> (265) 44 45 46
    PROGRAMID <string> (266) 5
    DISPLAY <string> (267) 11
    ACCEPT <string> (268) 12
    STOP <string> (269) 47
    RUN <string> (270) 47
    IF <string> (271) 13
    THEN <string> (272) 13
    ENDIF <string> (273) 13
    PERFORM <string> (274) 14 15
    UNTIL <string> (275) 14
    COUNT <string> (276) 14
    TIMES <string> (277) 15
    PICTURE <string> (278) 16 19 21 23
    PIC <string> (279) 17 18 20 22 24 25
    IS <string> (280) 16 19 21 23
    PERIOD <character> (281) 5 8 9 44 45 46 47
    GT_OP <character> (282) 28
    LT_OP <character> (283) 29
    EQ_OP <character> (284) 30
    DOUBLE_EQ_OP <character> (285) 31
    GT_EQ_OP <character> (286) 32
    LT_EQ_OP <character> (287) 33
    OPEN_PARENTHESES <character> (288) 40 43
    CLOSE_PARENTHESES <character> (289) 40 43
    NINE <character> (290) 37 40
    LETTERV <character> (291) 41
    LETTERS <character> (292) 42
    LETTERX <character> (293) 39 43


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    Program <ast> (40)
        on left: 1
        on right: 0
    Module1 <ast> (41)
        on left: 2
        on right: 1
    Module2 <ast> (42)
        on left: 3
        on right: 1
    Module3 <ast> (43)
        on left: 4
        on right: 1
    ProgID <ast> (44)
        on left: 5
        on right: 2
    Statements <ast> (45)
        on left: 6 7
        on right: 4 7
    Statement <ast> (46)
        on left: 8 9 10
        on right: 7 13 14 15
    Expr <ast> (47)
        on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
        on right: 9 10
    Condition <ast> (48)
        on left: 26 27
        on right: 13
    Operator <ast> (49)
        on left: 28 29 30 31 32 33
        on right: 14 26 27
    DoubleDigit <ast> (50)
        on left: 34 35
        on right: 16 17 18 19 20 21 22 23 24 25
    Nines <ast> (51)
        on left: 36 37
        on right: 16 17 37 41 42
    Xs <ast> (52)
        on left: 38 39
        on right: 23 24 39
    IntPicClause <ast> (53)
        on left: 40
        on right: 18
    FloatClause <ast> (54)
        on left: 41
        on right: 19 20
    UnsignedClause <ast> (55)
        on left: 42
        on right: 21 22
    StringPicClause <ast> (56)
        on left: 43
        on right: 25
    IDDiv <ast> (57)
        on left: 44
        on right: 2
    EnvDiv <ast> (58)
        on left: 45
        on right: 3
    ProcDiv <ast> (59)
        on left: 46
        on right: 4
    StopRun <ast> (60)
        on left: 47
        on right: 4


State 0

    0 $accept: . Program $end

    IDENTIFICATION  shift, and go to state 1

    Program  go to state 2
    Module1  go to state 3
    IDDiv    go to state 4


State 1

   44 IDDiv: IDENTIFICATION . DIVISION PERIOD

    DIVISION  shift, and go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: Module1 . Module2 Module3

    ENVIRIONMENT  shift, and go to state 7

    Module2  go to state 8
    EnvDiv   go to state 9


State 4

    2 Module1: IDDiv . ProgID

    PROGRAMID  shift, and go to state 10

    ProgID  go to state 11


State 5

   44 IDDiv: IDENTIFICATION DIVISION . PERIOD

    PERIOD  shift, and go to state 12


State 6

    0 $accept: Program $end .

    $default  accept


State 7

   45 EnvDiv: ENVIRIONMENT . DIVISION PERIOD

    DIVISION  shift, and go to state 13


State 8

    1 Program: Module1 Module2 . Module3

    PROCEDURE  shift, and go to state 14

    Module3  go to state 15
    ProcDiv  go to state 16


State 9

    3 Module2: EnvDiv .

    $default  reduce using rule 3 (Module2)


State 10

    5 ProgID: PROGRAMID . PERIOD ID PERIOD

    PERIOD  shift, and go to state 17


State 11

    2 Module1: IDDiv ProgID .

    $default  reduce using rule 2 (Module1)


State 12

   44 IDDiv: IDENTIFICATION DIVISION PERIOD .

    $default  reduce using rule 44 (IDDiv)


State 13

   45 EnvDiv: ENVIRIONMENT DIVISION . PERIOD

    PERIOD  shift, and go to state 18


State 14

   46 ProcDiv: PROCEDURE . DIVISION PERIOD

    DIVISION  shift, and go to state 19


State 15

    1 Program: Module1 Module2 Module3 .

    $default  reduce using rule 1 (Program)


State 16

    4 Module3: ProcDiv . Statements StopRun

    DIGIT    shift, and go to state 20
    DISPLAY  shift, and go to state 21
    ACCEPT   shift, and go to state 22
    IF       shift, and go to state 23
    PERFORM  shift, and go to state 24
    PERIOD   shift, and go to state 25

    ID        reduce using rule 34 (DoubleDigit)
    $default  reduce using rule 6 (Statements)

    Statements   go to state 26
    Statement    go to state 27
    Expr         go to state 28
    DoubleDigit  go to state 29


State 17

    5 ProgID: PROGRAMID PERIOD . ID PERIOD

    ID  shift, and go to state 30


State 18

   45 EnvDiv: ENVIRIONMENT DIVISION PERIOD .

    $default  reduce using rule 45 (EnvDiv)


State 19

   46 ProcDiv: PROCEDURE DIVISION . PERIOD

    PERIOD  shift, and go to state 31


State 20

   35 DoubleDigit: DIGIT . DIGIT

    DIGIT  shift, and go to state 32


State 21

   11 Expr: DISPLAY . STRING

    STRING  shift, and go to state 33


State 22

   12 Expr: ACCEPT . ID

    ID  shift, and go to state 34


State 23

   13 Expr: IF . Condition THEN Statement ENDIF

    ID  shift, and go to state 35

    Condition  go to state 36


State 24

   14 Expr: PERFORM . Statement UNTIL COUNT Operator NUMBER
   15     | PERFORM . Statement NUMBER TIMES

    DIGIT    shift, and go to state 20
    DISPLAY  shift, and go to state 21
    ACCEPT   shift, and go to state 22
    IF       shift, and go to state 23
    PERFORM  shift, and go to state 24
    PERIOD   shift, and go to state 25

    $default  reduce using rule 34 (DoubleDigit)

    Statement    go to state 37
    Expr         go to state 28
    DoubleDigit  go to state 29


State 25

    8 Statement: PERIOD .

    $default  reduce using rule 8 (Statement)


State 26

    4 Module3: ProcDiv Statements . StopRun

    STOP  shift, and go to state 38

    StopRun  go to state 39


State 27

    7 Statements: Statement . Statements

    DIGIT    shift, and go to state 20
    DISPLAY  shift, and go to state 21
    ACCEPT   shift, and go to state 22
    IF       shift, and go to state 23
    PERFORM  shift, and go to state 24
    PERIOD   shift, and go to state 25

    ID        reduce using rule 34 (DoubleDigit)
    $default  reduce using rule 6 (Statements)

    Statements   go to state 40
    Statement    go to state 27
    Expr         go to state 28
    DoubleDigit  go to state 29


State 28

    9 Statement: Expr . PERIOD
   10          | Expr .

    PERIOD  shift, and go to state 41

    PERIOD    [reduce using rule 10 (Statement)]
    $default  reduce using rule 10 (Statement)


State 29

   16 Expr: DoubleDigit . ID PICTURE IS Nines
   17     | DoubleDigit . ID PIC Nines
   18     | DoubleDigit . ID PIC IntPicClause
   19     | DoubleDigit . ID PICTURE IS FloatClause
   20     | DoubleDigit . ID PIC FloatClause
   21     | DoubleDigit . ID PICTURE IS UnsignedClause
   22     | DoubleDigit . ID PIC UnsignedClause
   23     | DoubleDigit . ID PICTURE IS Xs
   24     | DoubleDigit . ID PIC Xs
   25     | DoubleDigit . ID PIC StringPicClause

    ID  shift, and go to state 42


State 30

    5 ProgID: PROGRAMID PERIOD ID . PERIOD

    PERIOD  shift, and go to state 43


State 31

   46 ProcDiv: PROCEDURE DIVISION PERIOD .

    $default  reduce using rule 46 (ProcDiv)


State 32

   35 DoubleDigit: DIGIT DIGIT .

    $default  reduce using rule 35 (DoubleDigit)


State 33

   11 Expr: DISPLAY STRING .

    $default  reduce using rule 11 (Expr)


State 34

   12 Expr: ACCEPT ID .

    $default  reduce using rule 12 (Expr)


State 35

   26 Condition: ID . Operator ID
   27          | ID . Operator NUMBER

    GT_OP         shift, and go to state 44
    LT_OP         shift, and go to state 45
    EQ_OP         shift, and go to state 46
    DOUBLE_EQ_OP  shift, and go to state 47
    GT_EQ_OP      shift, and go to state 48
    LT_EQ_OP      shift, and go to state 49

    Operator  go to state 50


State 36

   13 Expr: IF Condition . THEN Statement ENDIF

    THEN  shift, and go to state 51


State 37

   14 Expr: PERFORM Statement . UNTIL COUNT Operator NUMBER
   15     | PERFORM Statement . NUMBER TIMES

    NUMBER  shift, and go to state 52
    UNTIL   shift, and go to state 53


State 38

   47 StopRun: STOP . RUN PERIOD

    RUN  shift, and go to state 54


State 39

    4 Module3: ProcDiv Statements StopRun .

    $default  reduce using rule 4 (Module3)


State 40

    7 Statements: Statement Statements .

    $default  reduce using rule 7 (Statements)


State 41

    9 Statement: Expr PERIOD .

    $default  reduce using rule 9 (Statement)


State 42

   16 Expr: DoubleDigit ID . PICTURE IS Nines
   17     | DoubleDigit ID . PIC Nines
   18     | DoubleDigit ID . PIC IntPicClause
   19     | DoubleDigit ID . PICTURE IS FloatClause
   20     | DoubleDigit ID . PIC FloatClause
   21     | DoubleDigit ID . PICTURE IS UnsignedClause
   22     | DoubleDigit ID . PIC UnsignedClause
   23     | DoubleDigit ID . PICTURE IS Xs
   24     | DoubleDigit ID . PIC Xs
   25     | DoubleDigit ID . PIC StringPicClause

    PICTURE  shift, and go to state 55
    PIC      shift, and go to state 56


State 43

    5 ProgID: PROGRAMID PERIOD ID PERIOD .

    $default  reduce using rule 5 (ProgID)


State 44

   28 Operator: GT_OP .

    $default  reduce using rule 28 (Operator)


State 45

   29 Operator: LT_OP .

    $default  reduce using rule 29 (Operator)


State 46

   30 Operator: EQ_OP .

    $default  reduce using rule 30 (Operator)


State 47

   31 Operator: DOUBLE_EQ_OP .

    $default  reduce using rule 31 (Operator)


State 48

   32 Operator: GT_EQ_OP .

    $default  reduce using rule 32 (Operator)


State 49

   33 Operator: LT_EQ_OP .

    $default  reduce using rule 33 (Operator)


State 50

   26 Condition: ID Operator . ID
   27          | ID Operator . NUMBER

    NUMBER  shift, and go to state 57
    ID      shift, and go to state 58


State 51

   13 Expr: IF Condition THEN . Statement ENDIF

    DIGIT    shift, and go to state 20
    DISPLAY  shift, and go to state 21
    ACCEPT   shift, and go to state 22
    IF       shift, and go to state 23
    PERFORM  shift, and go to state 24
    PERIOD   shift, and go to state 25

    $default  reduce using rule 34 (DoubleDigit)

    Statement    go to state 59
    Expr         go to state 28
    DoubleDigit  go to state 29


State 52

   15 Expr: PERFORM Statement NUMBER . TIMES

    TIMES  shift, and go to state 60


State 53

   14 Expr: PERFORM Statement UNTIL . COUNT Operator NUMBER

    COUNT  shift, and go to state 61


State 54

   47 StopRun: STOP RUN . PERIOD

    PERIOD  shift, and go to state 62


State 55

   16 Expr: DoubleDigit ID PICTURE . IS Nines
   19     | DoubleDigit ID PICTURE . IS FloatClause
   21     | DoubleDigit ID PICTURE . IS UnsignedClause
   23     | DoubleDigit ID PICTURE . IS Xs

    IS  shift, and go to state 63


State 56

   17 Expr: DoubleDigit ID PIC . Nines
   18     | DoubleDigit ID PIC . IntPicClause
   20     | DoubleDigit ID PIC . FloatClause
   22     | DoubleDigit ID PIC . UnsignedClause
   24     | DoubleDigit ID PIC . Xs
   25     | DoubleDigit ID PIC . StringPicClause

    NINE     shift, and go to state 64
    LETTERS  shift, and go to state 65
    LETTERX  shift, and go to state 66

    NUMBER    reduce using rule 36 (Nines)
    NUMBER    [reduce using rule 38 (Xs)]
    DIGIT     reduce using rule 36 (Nines)
    DIGIT     [reduce using rule 38 (Xs)]
    ID        reduce using rule 36 (Nines)
    ID        [reduce using rule 38 (Xs)]
    DISPLAY   reduce using rule 36 (Nines)
    DISPLAY   [reduce using rule 38 (Xs)]
    ACCEPT    reduce using rule 36 (Nines)
    ACCEPT    [reduce using rule 38 (Xs)]
    STOP      reduce using rule 36 (Nines)
    STOP      [reduce using rule 38 (Xs)]
    IF        reduce using rule 36 (Nines)
    IF        [reduce using rule 38 (Xs)]
    ENDIF     reduce using rule 36 (Nines)
    ENDIF     [reduce using rule 38 (Xs)]
    PERFORM   reduce using rule 36 (Nines)
    PERFORM   [reduce using rule 38 (Xs)]
    UNTIL     reduce using rule 36 (Nines)
    UNTIL     [reduce using rule 38 (Xs)]
    PERIOD    reduce using rule 36 (Nines)
    PERIOD    [reduce using rule 38 (Xs)]
    $default  reduce using rule 36 (Nines)

    Nines            go to state 67
    Xs               go to state 68
    IntPicClause     go to state 69
    FloatClause      go to state 70
    UnsignedClause   go to state 71
    StringPicClause  go to state 72


State 57

   27 Condition: ID Operator NUMBER .

    $default  reduce using rule 27 (Condition)


State 58

   26 Condition: ID Operator ID .

    $default  reduce using rule 26 (Condition)


State 59

   13 Expr: IF Condition THEN Statement . ENDIF

    ENDIF  shift, and go to state 73


State 60

   15 Expr: PERFORM Statement NUMBER TIMES .

    $default  reduce using rule 15 (Expr)


State 61

   14 Expr: PERFORM Statement UNTIL COUNT . Operator NUMBER

    GT_OP         shift, and go to state 44
    LT_OP         shift, and go to state 45
    EQ_OP         shift, and go to state 46
    DOUBLE_EQ_OP  shift, and go to state 47
    GT_EQ_OP      shift, and go to state 48
    LT_EQ_OP      shift, and go to state 49

    Operator  go to state 74


State 62

   47 StopRun: STOP RUN PERIOD .

    $default  reduce using rule 47 (StopRun)


State 63

   16 Expr: DoubleDigit ID PICTURE IS . Nines
   19     | DoubleDigit ID PICTURE IS . FloatClause
   21     | DoubleDigit ID PICTURE IS . UnsignedClause
   23     | DoubleDigit ID PICTURE IS . Xs

    NINE     shift, and go to state 75
    LETTERS  shift, and go to state 65
    LETTERX  shift, and go to state 76

    NUMBER    reduce using rule 36 (Nines)
    NUMBER    [reduce using rule 38 (Xs)]
    DIGIT     reduce using rule 36 (Nines)
    DIGIT     [reduce using rule 38 (Xs)]
    ID        reduce using rule 36 (Nines)
    ID        [reduce using rule 38 (Xs)]
    DISPLAY   reduce using rule 36 (Nines)
    DISPLAY   [reduce using rule 38 (Xs)]
    ACCEPT    reduce using rule 36 (Nines)
    ACCEPT    [reduce using rule 38 (Xs)]
    STOP      reduce using rule 36 (Nines)
    STOP      [reduce using rule 38 (Xs)]
    IF        reduce using rule 36 (Nines)
    IF        [reduce using rule 38 (Xs)]
    ENDIF     reduce using rule 36 (Nines)
    ENDIF     [reduce using rule 38 (Xs)]
    PERFORM   reduce using rule 36 (Nines)
    PERFORM   [reduce using rule 38 (Xs)]
    UNTIL     reduce using rule 36 (Nines)
    UNTIL     [reduce using rule 38 (Xs)]
    PERIOD    reduce using rule 36 (Nines)
    PERIOD    [reduce using rule 38 (Xs)]
    $default  reduce using rule 36 (Nines)

    Nines           go to state 77
    Xs              go to state 78
    FloatClause     go to state 79
    UnsignedClause  go to state 80


State 64
